# morfologik-rs

./: .gitignore  Cargo.toml  README.md  plan.md
crates/morfologik-fsa/: Cargo.toml
crates/morfologik-fsa-builders/: Cargo.toml
crates/morfologik-fsa-builders/src/: cfsa2_serializer.rs  error.rs  fsa5_serializer.rs  fsa_builder.rs  fsa_info.rs  fsa_serializer_trait.rs  fsa_utils.rs  lib.rs
crates/morfologik-fsa/src/: cfsa2.rs  error.rs  fsa5.rs  fsa_header.rs  fsa_trait.rs  iterator.rs  lib.rs  traversal.rs
crates/morfologik-polish/: Cargo.toml
crates/morfologik-polish/src/: error.rs  lib.rs  polish_stemmer.rs
crates/morfologik-speller/: Cargo.toml
crates/morfologik-speller/src/: error.rs  hmatrix.rs  lib.rs  speller.rs
crates/morfologik-stemming/: Cargo.toml
crates/morfologik-stemming/src/: array_view_list.rs  buffer_utils.rs  dictionary.rs  dictionary_iterator.rs  dictionary_lookup.rs  dictionary_metadata.rs  encoder_type.rs  error.rs  lib.rs  sequence_encoder_trait.rs  stemmer_trait.rs  word_data.rs
crates/morfologik-stemming/src/encoders/: mod.rs  no_encoder.rs  trim_infix_suffix_encoder.rs  trim_prefix_encoder.rs  trim_prefix_suffix_encoder.rs  trim_suffix_encoder.rs
examples/: use_fsa.rs  use_stemmer.rs
morfologik-tools/: Cargo.toml
morfologik-tools/src/: cli.rs  error.rs  main.rs  utils.rs
morfologik-tools/src/commands/: dict_apply.rs  dict_compile.rs  dict_decompile.rs  fsa_build.rs  fsa_compile.rs  fsa_decompile.rs  fsa_dump.rs  fsa_info_cmd.rs  mod.rs
