[package]
name = "morfologik-fsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.5.0"
thiserror = "1.0.58"

[dev-dependencies]
assert_matches = "1.5.0" # Do testowania wariantów błędów
